[package]
name = "pong_bevy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
bevy = "0.11.2"
rand = { version = "0.8.5", features = [] }
console_error_panic_hook = "0.1.7"

[dependencies.bevy_kira_audio]
version = "0.17.0"
default-features = false
features = [
    "wav",
]
